force-app/main/default/objects/Risk__c/Risk__c.object-meta.xml
<CustomObject>
    <description>Used to denote risks to a project, probability of the risk occurring, and the impact the occurrence will have</description>
    <label>Risk</label>
    <nameField>
        <label>Risk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>