force-app/main/default/objects/Risk__c/fields/Combined_Impact__c.field-meta.xml
<CustomField>
    <fullName>Combined_Impact__c</fullName>
    <formula>Probability__c *  ((High_Impact__c + Low_Impact__c) / 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estimated impact (lower is better). Use to prioritize risk mitigation</inlineHelpText>
    <label>Combined Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>