force-app/main/default/objects/Risk__c/fields/Feature_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Feature_Forecast__c</fullName>
    <label>Feature Forecast</label>
    <referenceTo>Feature_Forecast__c</referenceTo>
    <relationshipLabel>Risks</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>