force-app/main/default/objects/Risk__c/fields/High_Impact__c.field-meta.xml
<CustomField>
    <fullName>High_Impact__c</fullName>
    <inlineHelpText>Maximum number of sprints/points added to the project if this event occurs</inlineHelpText>
    <label>High Impact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>