force-app/main/default/objects/Risk__c/fields/Low_Impact__c.field-meta.xml
<CustomField>
    <fullName>Low_Impact__c</fullName>
    <inlineHelpText>Minimum number of stories/points that could be added due to this event occurring.</inlineHelpText>
    <label>Low Impact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>